finalizacion de proyecto (minimo entregable) | finalizacion de proyecto CRUD - BETA 1.0 | notas: crear documentacion README y demas archivos adicionales